Added Student No. To Page Title

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>GXXXXXXXX</ion-title>
+    <ion-title>G00399178</ion-title>
     <ion-buttons slot="end">
       <ion-button routerLink="/favourites">
         <ion-icon name="heart"></ion-icon>
